parser.output
Grammar

    0 $accept: program $end

    1 program: ε
    2        | program statement

    3 statement: VAR ID '=' expression ';'
    4          | expression ';'
    5          | error ';'

    6 expression: NUMBER
    7           | ID
    8           | expression '+' expression
    9           | expression '-' expression
   10           | expression '*' expression
   11           | expression '/' expression
   12           | expression '^' expression
   13           | SIN '(' expression ')'
   14           | COS '(' expression ')'
   15           | LOG '(' expression ')'
   16           | SQRT '(' expression ')'
   17           | '(' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 13 14 15 16 17
    ')' (41) 13 14 15 16 17
    '*' (42) 10
    '+' (43) 8
    '-' (45) 9
    '/' (47) 11
    ';' (59) 3 4 5
    '=' (61) 3
    '^' (94) 12
    error (256) 5
    NUMBER <fval> (258) 6
    ID <sval> (259) 3 7
    VAR (260) 3
    SIN (261) 13
    COS (262) 14
    LOG (263) 15
    SQRT (264) 16


Nonterminals, with rules where they appear

    $accept (19)
        on left: 0
    program (20)
        on left: 1 2
        on right: 0 2
    statement (21)
        on left: 3 4 5
        on right: 2
    expression <node> (22)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 3 4 8 9 10 11 12 13 14 15 16 17


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • statement

    $end    shift, and go to state 2
    error   shift, and go to state 3
    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    VAR     shift, and go to state 6
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    statement   go to state 12
    expression  go to state 13


State 2

    0 $accept: program $end •

    $default  accept


State 3

    5 statement: error • ';'

    ';'  shift, and go to state 14


State 4

    6 expression: NUMBER •

    $default  reduce using rule 6 (expression)


State 5

    7 expression: ID •

    $default  reduce using rule 7 (expression)


State 6

    3 statement: VAR • ID '=' expression ';'

    ID  shift, and go to state 15


State 7

   13 expression: SIN • '(' expression ')'

    '('  shift, and go to state 16


State 8

   14 expression: COS • '(' expression ')'

    '('  shift, and go to state 17


State 9

   15 expression: LOG • '(' expression ')'

    '('  shift, and go to state 18


State 10

   16 expression: SQRT • '(' expression ')'

    '('  shift, and go to state 19


State 11

   17 expression: '(' • expression ')'

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 20


State 12

    2 program: program statement •

    $default  reduce using rule 2 (program)


State 13

    4 statement: expression • ';'
    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25
    ';'  shift, and go to state 26


State 14

    5 statement: error ';' •

    $default  reduce using rule 5 (statement)


State 15

    3 statement: VAR ID • '=' expression ';'

    '='  shift, and go to state 27


State 16

   13 expression: SIN '(' • expression ')'

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 28


State 17

   14 expression: COS '(' • expression ')'

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 29


State 18

   15 expression: LOG '(' • expression ')'

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 30


State 19

   16 expression: SQRT '(' • expression ')'

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 31


State 20

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression
   17           | '(' expression • ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25
    ')'  shift, and go to state 32


State 21

    8 expression: expression '+' • expression

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 33


State 22

    9 expression: expression '-' • expression

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 34


State 23

   10 expression: expression '*' • expression

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 35


State 24

   11 expression: expression '/' • expression

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 36


State 25

   12 expression: expression '^' • expression

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 37


State 26

    4 statement: expression ';' •

    $default  reduce using rule 4 (statement)


State 27

    3 statement: VAR ID '=' • expression ';'

    NUMBER  shift, and go to state 4
    ID      shift, and go to state 5
    SIN     shift, and go to state 7
    COS     shift, and go to state 8
    LOG     shift, and go to state 9
    SQRT    shift, and go to state 10
    '('     shift, and go to state 11

    expression  go to state 38


State 28

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression
   13           | SIN '(' expression • ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25
    ')'  shift, and go to state 39


State 29

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression
   14           | COS '(' expression • ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25
    ')'  shift, and go to state 40


State 30

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression
   15           | LOG '(' expression • ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25
    ')'  shift, and go to state 41


State 31

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression
   16           | SQRT '(' expression • ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25
    ')'  shift, and go to state 42


State 32

   17 expression: '(' expression ')' •

    $default  reduce using rule 17 (expression)


State 33

    8 expression: expression • '+' expression
    8           | expression '+' expression •
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 8 (expression)


State 34

    8 expression: expression • '+' expression
    9           | expression • '-' expression
    9           | expression '-' expression •
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 9 (expression)


State 35

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   10           | expression '*' expression •
   11           | expression • '/' expression
   12           | expression • '^' expression

    '^'  shift, and go to state 25

    $default  reduce using rule 10 (expression)


State 36

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   11           | expression '/' expression •
   12           | expression • '^' expression

    '^'  shift, and go to state 25

    $default  reduce using rule 11 (expression)


State 37

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression
   12           | expression '^' expression •

    '^'  shift, and go to state 25

    $default  reduce using rule 12 (expression)


State 38

    3 statement: VAR ID '=' expression • ';'
    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | expression • '^' expression

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '^'  shift, and go to state 25
    ';'  shift, and go to state 43


State 39

   13 expression: SIN '(' expression ')' •

    $default  reduce using rule 13 (expression)


State 40

   14 expression: COS '(' expression ')' •

    $default  reduce using rule 14 (expression)


State 41

   15 expression: LOG '(' expression ')' •

    $default  reduce using rule 15 (expression)


State 42

   16 expression: SQRT '(' expression ')' •

    $default  reduce using rule 16 (expression)


State 43

    3 statement: VAR ID '=' expression ';' •

    $default  reduce using rule 3 (statement)
